# FinRAG

./: .env.example  .gitignore  LICENSE  README.md  RESULTS.md  pyproject.toml
.github/workflows/: ci.yml
data/processed/: corpus.jsonl
eval/: gold.jsonl  judge.py  metrics.py  run_eval.py
scripts/: auto_gold.py  ingest_edgar.py  ingest_pdfs.py
src/finrag/: chunking.py  cli.py  config.py  embeddings.py  generation.py  pipeline.py  retriever.py  types.py  vectorstore.py
tests/: test_eval_invariants.py  test_pipeline.py
