[project]
name = "finrag"
version = "0.1.0"
description = "Production-grade hybrid RAG over financial & research reports, with an eval-first design."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39",             # generation, query rewriting, eval judge
    "sentence-transformers>=3.0",  # local embeddings + cross-encoder reranker
    "qdrant-client>=1.12",         # vector store (>=1.12 for query_points API)
    "rank-bm25>=0.2.2",            # sparse retrieval
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "tiktoken>=0.7",               # token-aware chunking
    "pypdf>=4.2",                  # PDF ingestion
    "httpx>=0.27",                 # EDGAR HTML fetching
    "beautifulsoup4>=4.12",        # EDGAR HTML parsing
    "tenacity>=8.4",
    "rich>=13.7",
    "typer>=0.12",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.5", "mypy>=1.10"]
api = ["fastapi>=0.111", "uvicorn>=0.30"]
openai = ["openai>=1.40"]          # optional: cloud embeddings as an alternative to local

[project.scripts]
finrag = "finrag.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]